Aligment to current USE version
- Removed references that were unused or referencing non-existing artifacts
- Aligned usage of USE APIs to the current version